# kedro-pypi-monitor

./: .gitignore  First Steps with Kedro.ipynb  README.md  dev-requirements.in  dev-requirements.txt  env.example  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters_fetch_demo.yml
conf/demo/: catalog.yml  globals.yml
data/00_demo/: pypi_kedro_demo.csv  pypi_kedro_demo.pq
src/kedro_pypi_monitor/: __init__.py
src/kedro_pypi_monitor/datasets/: __init__.py  polars_bigquery.py
src/kedro_pypi_monitor/pipelines/data_processing/: nodes.py  pipeline.py
src/kedro_pypi_monitor/pipelines/fetch_demo/: __init__.py  nodes.py  pipeline.py
src/kedro_pypi_monitor/pipelines/fetch_kedro_data/: nodes.py  pipeline.py
tests/pipelines/fetch_demo/: test_pipeline.py
